--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Saved Videos</title>
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   <h2>My Saved Videos</h2>
-  <div id="videos"></div>
+  <div id="app"></div>
   <script src="popup.js"></script>
 </body>
 </html>
